# airbyte

./: .bumpversion.cfg  gradle.properties  run-ab-platform.sh
airbyte-integrations/connectors/source-chargify/source_chargify/: manifest.yaml
airbyte-integrations/connectors/source-shopify-partners/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml  setup.py
airbyte-integrations/connectors/source-shopify-partners/sample_files/: configured_catalog.json  configured_catalog_old.json
airbyte-integrations/connectors/source-shopify-partners/source_shopify_partners/: __init__.py  credit_streams.py  partners_api.py  releationship_streams.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-shopify-partners/source_shopify_partners/schemas/: all_transactions.json  credit_applied.json  credit_failed.json  one_time_charge_declined.json  relationship_deactivated.json  relationship_uninstalls.json  subscription_charge_unfrozen.json
airbyte-integrations/connectors/source-shopify-partners/src/source_shopify_partners/: source.py  spec.yaml
airbyte-integrations/connectors/source-shopify-partners/src/source_shopify_partners/schemas/: relationship_installs.json  subscription_charge_accepted.json  subscription_charge_expired.json
airbyte-integrations/connectors/source-shopify-partners/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
airbyte-integrations/connectors/source-shopify/unit_tests/: test_source.py
docs/connector-development/config-based/tutorial/: 4-reading-data.md
docs/integrations/sources/: mssql.md
