[build-system]
requires = ["poetry-core>=1.0.0", ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.1.0"
name = "source-shopify-partners"
description = "Source implementation for shopify-partners."
authors = ["Airbyte <contact@airbyte.io>", ]
license = "MIT"
readme = "README.md"
documentation = "https://docs.airbyte.com/integrations/sources/shopify-partners"
homepage = "https://airbyte.com"
repository = "https://github.com/airbytehq/airbyte"
include = ["source_shopify_partners/schemas/*.json"]

[[tool.poetry.packages]]
include = "source_shopify_partners"
[[tool.poetry.packages]]
include = "main.py"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
airbyte-cdk = "==0.59.0"
requests = "^2.31.0"

[tool.poetry.scripts]
source-shopify-partners = "source_shopify_partners.run:run"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.11.0"
pytest-mock = "^3.12.0"
pytest = "^8.0.0"
